syntax = "proto3";

package telemetry.message.event;

import "google/protobuf/timestamp.proto";

import "telemetry/message/device_added_event.proto";
import "telemetry/message/device_removed_event.proto";
import "telemetry/message/scenario_added_event.proto";
import "telemetry/message/scenario_removed_event.proto";
import "telemetry/message/device_action.proto";

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

message HubEventProto {
    string hub_id = 1; // идентификатор хаба
    google.protobuf.Timestamp timestamp = 2; // таймстемп события
    oneof payload {// содержимое конкретного события
          DeviceAddedEventProto device_added = 3;      // данные события добавления устройства
          DeviceRemovedEventProto device_removed = 4;  // данные события удаления устройства
          ScenarioAddedEventProto scenario_added = 5;      // данные события добавления нового сценария
          ScenarioRemovedEventProto scenario_removed = 6;  // данные события удаления сценария
    }
}

message DeviceActionRequestProto {
    string hub_id = 1;
    string scenario_name = 2;
    DeviceActionProto action = 3;
    google.protobuf.Timestamp timestamp = 4;
}

